someFixes: some fixes