@@ -6,6 +6,10 @@ import org.springframework.context.annotation.ComponentScan;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.Collections;
+import java.util.List;
+import java.util.stream.Collectors;
+
 @RestController
 @RequestMapping("pet")
 @AllArgsConstructor
@@ -13,8 +17,8 @@ public class PetController {
     private PetService service;
 
     @GetMapping
-    public ResponseEntity<PetRepresentation.PetResponse> getAllPets(){
-        return ResponseEntity.ok((PetRepresentation.PetResponse) service.getAllPets().stream().map(PetRepresentation.PetResponse::from).toList());
+    public ResponseEntity<List<PetRepresentation.PetResponse>> getAllPets(){
+        return ResponseEntity.ok(service.getAllPets().stream().map(PetRepresentation.PetResponse::from).collect(Collectors.toList()));
     }
 
     @GetMapping("{id}")
@@ -36,8 +40,8 @@ public class PetController {
     }
 
     @PostMapping
-    public ResponseEntity<PetRepresentation.PetResponse> createPet(@RequestBody PetRepresentation.createPet pet){
-        return ResponseEntity.ok().body(PetRepresentation.PetResponse.from(service.createPet(pet)));
+    public ResponseEntity<List<PetRepresentation.PetResponse>> createPet(@RequestBody List<PetRepresentation.createPet> pet){
+        return ResponseEntity.ok().body(Collections.singletonList(PetRepresentation.PetResponse.from(service.createPet((PetRepresentation.createPet) pet))));
     }
 
     @DeleteMapping("{id}")
